--- a/src/components/TalentLayout.scss
+++ b/src/components/TalentLayout.scss
@@ -143,7 +143,7 @@
 		right: 0px;
 		object-fit: scale-down;
 		width: 38%;
-		z-index: 1;
+		z-index: 2;
 	}
 }
 
@@ -169,7 +169,7 @@
 
 		button {
 			position: absolute;
-            z-index: 2;
+            z-index: 10;
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
@@ -254,7 +254,8 @@
 		right: 0px;
 		object-fit: scale-down;
 		height: 90px;
-		z-index: 1;
+		width: 90px;
+		z-index: 2;
 	}
 
 }
